// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`daily data usage 1`] = `
Object {
  "usageHistory": Object {
    "accountType": "POSTPAID",
    "averageGroupPeriodUsage": null,
    "averagePeriodUsage": Object {
      "unit": "MB",
      "value": 768.00293,
    },
    "endDateTime": "2021-10-15T23:59:59+13:00",
    "interval": "DAILY",
    "sharerType": "NOT_SHARED",
    "startDateTime": "2021-10-07T11:00:00Z",
    "summarisedPeriods": Array [
      Object {
        "endDateTime": "2021-10-15T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 1500,
        },
        "startDateTime": "2021-10-14T11:00:00Z",
        "unbilled": true,
      },
      Object {
        "endDateTime": "2021-10-14T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-13T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-13T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-12T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-12T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-11T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-11T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 2048.007813,
        },
        "startDateTime": "2021-10-10T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 1024.003906,
        },
        "startDateTime": "2021-10-09T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-09T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 1024.003906,
        },
        "startDateTime": "2021-10-08T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-08T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 2048.007813,
        },
        "startDateTime": "2021-10-07T11:00:00Z",
        "unbilled": false,
      },
    ],
  },
}
`;

exports[`hourly data usage 1`] = `
Object {
  "usageHistory": Object {
    "accountType": "POSTPAID",
    "averageGroupPeriodUsage": null,
    "averagePeriodUsage": Object {
      "unit": "MB",
      "value": 85.333659,
    },
    "endDateTime": "2021-10-10T23:59:59Z",
    "interval": "HOURLY",
    "sharerType": "NOT_SHARED",
    "startDateTime": "2021-10-10T00:00:00Z",
    "summarisedPeriods": Array [
      Object {
        "endDateTime": "2021-10-10T23:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 567,
        },
        "startDateTime": "2021-10-10T23:00:00Z",
        "unbilled": true,
      },
      Object {
        "endDateTime": "2021-10-10T22:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 2048.007813,
        },
        "startDateTime": "2021-10-10T22:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T21:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T21:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T20:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T20:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T19:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T19:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T18:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T18:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T17:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T17:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T16:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T16:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T15:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T15:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T14:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T14:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T13:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T13:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T12:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T12:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T11:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T11:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T10:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T10:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T09:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T09:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T08:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T08:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T07:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T07:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T06:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T06:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T05:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T05:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T04:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T04:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T03:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T03:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T02:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T02:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T01:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T01:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-10-10T00:59:59Z",
        "periodBreakdown": null,
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MB",
          "value": 0,
        },
        "startDateTime": "2021-10-10T00:00:00Z",
        "unbilled": false,
      },
    ],
  },
}
`;

exports[`monthly data usage 1`] = `
Object {
  "usageHistory": Object {
    "accountType": "POSTPAID",
    "averageGroupPeriodUsage": Object {
      "unit": "MB",
      "value": 1899.448243,
    },
    "averagePeriodUsage": Object {
      "unit": "MB",
      "value": 1010.307618,
    },
    "endDateTime": "2021-11-12T10:59:59Z",
    "interval": "MONTHLY",
    "sharerType": "LEADER",
    "startDateTime": "2021-08-12T12:00:00Z",
    "summarisedPeriods": Array [
      Object {
        "endDateTime": "2021-11-12T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-10-12T11:00:00.000Z|2021-11-12T10:59:59.000Z",
            "periodGroupLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodGroupRemaining": Object {
              "unit": "MB",
              "value": 2431.703124,
            },
            "periodGroupUsage": Object {
              "unit": "MB",
              "value": 1664.296876,
            },
            "periodLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodRemaining": Object {
              "unit": "MB",
              "value": 2912.757813,
            },
            "periodUsage": Object {
              "unit": "MB",
              "value": 1183.242187,
            },
          },
        ],
        "periodGroupUsage": Object {
          "unit": "MB",
          "value": 1664.296876,
        },
        "periodUsage": Object {
          "unit": "MB",
          "value": 1183.242187,
        },
        "startDateTime": "2021-10-12T11:00:00Z",
        "unbilled": true,
      },
      Object {
        "endDateTime": "2021-10-12T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-09-12T12:00:00.000Z|2021-10-12T10:59:59.000Z",
            "periodGroupLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodGroupRemaining": Object {
              "unit": "MB",
              "value": 3888.666016,
            },
            "periodGroupUsage": Object {
              "unit": "MB",
              "value": 207.333984,
            },
            "periodLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodRemaining": Object {
              "unit": "MB",
              "value": 3987.5625,
            },
            "periodUsage": Object {
              "unit": "MB",
              "value": 108.4375,
            },
          },
        ],
        "periodGroupUsage": Object {
          "unit": "MB",
          "value": 207.333984,
        },
        "periodUsage": Object {
          "unit": "MB",
          "value": 108.4375,
        },
        "startDateTime": "2021-09-12T12:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-09-12T11:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-08-12T12:00:00.000Z|2021-09-12T11:59:59.000Z",
            "periodGroupLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodGroupRemaining": Object {
              "unit": "MB",
              "value": 504.437499,
            },
            "periodGroupUsage": Object {
              "unit": "MB",
              "value": 3591.562501,
            },
            "periodLimit": Object {
              "unit": "MB",
              "value": 4096,
            },
            "periodRemaining": Object {
              "unit": "MB",
              "value": 2183.822265,
            },
            "periodUsage": Object {
              "unit": "MB",
              "value": 1912.177735,
            },
          },
        ],
        "periodGroupUsage": Object {
          "unit": "MB",
          "value": 3591.562501,
        },
        "periodUsage": Object {
          "unit": "MB",
          "value": 1912.177735,
        },
        "startDateTime": "2021-08-12T12:00:00Z",
        "unbilled": false,
      },
    ],
  },
}
`;

exports[`monthly sms usage 1`] = `
Object {
  "usageHistory": Object {
    "accountType": "POSTPAID",
    "averageGroupPeriodUsage": null,
    "averagePeriodUsage": Object {
      "unit": "TEXT",
      "value": 238,
    },
    "endDateTime": "2021-11-08T10:59:59Z",
    "interval": "MONTHLY",
    "sharerType": "NOT_SHARED",
    "startDateTime": "2021-08-08T12:00:00Z",
    "summarisedPeriods": Array [
      Object {
        "endDateTime": "2021-11-08T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "ADDITIONAL_INCLUDED",
            "periodBreakdownId": "ADDITIONAL_INCLUDED|2021-10-08T11:00:00.000Z|2021-11-08T10:59:59.000Z",
            "periodGroupLimit": null,
            "periodGroupRemaining": null,
            "periodGroupUsage": null,
            "periodLimit": null,
            "periodRemaining": null,
            "periodUsage": Object {
              "unit": "TEXT",
              "value": 203,
            },
          },
        ],
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "TEXT",
          "value": 203,
        },
        "startDateTime": "2021-10-08T11:00:00Z",
        "unbilled": true,
      },
      Object {
        "endDateTime": "2021-10-08T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-09-08T12:00:00.000Z|2021-10-08T10:59:59.000Z",
            "periodGroupLimit": null,
            "periodGroupRemaining": null,
            "periodGroupUsage": null,
            "periodLimit": null,
            "periodRemaining": null,
            "periodUsage": Object {
              "unit": "TEXT",
              "value": 360,
            },
          },
        ],
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "TEXT",
          "value": 360,
        },
        "startDateTime": "2021-09-08T12:00:00Z",
        "unbilled": false,
      },
      Object {
        "endDateTime": "2021-09-08T11:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-08-08T12:00:00.000Z|2021-09-08T11:59:59.000Z",
            "periodGroupLimit": null,
            "periodGroupRemaining": null,
            "periodGroupUsage": null,
            "periodLimit": null,
            "periodRemaining": null,
            "periodUsage": Object {
              "unit": "TEXT",
              "value": 151,
            },
          },
        ],
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "TEXT",
          "value": 151,
        },
        "startDateTime": "2021-08-08T12:00:00Z",
        "unbilled": false,
      },
    ],
  },
}
`;

exports[`monthly voice usage 1`] = `
Object {
  "usageHistory": Object {
    "accountType": "POSTPAID",
    "averageGroupPeriodUsage": null,
    "averagePeriodUsage": Object {
      "unit": "MIN",
      "value": 171,
    },
    "endDateTime": "2021-11-08T10:59:59Z",
    "interval": "MONTHLY",
    "sharerType": "NOT_SHARED",
    "startDateTime": "2021-09-08T12:00:00Z",
    "summarisedPeriods": Array [
      Object {
        "endDateTime": "2021-11-08T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-10-08T11:00:00.000Z|2021-11-08T10:59:59.000Z",
            "periodGroupLimit": null,
            "periodGroupRemaining": null,
            "periodGroupUsage": null,
            "periodLimit": null,
            "periodRemaining": null,
            "periodUsage": Object {
              "unit": "MIN",
              "value": 104,
            },
          },
        ],
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MIN",
          "value": 104,
        },
        "startDateTime": "2021-10-08T11:00:00Z",
        "unbilled": true,
      },
      Object {
        "endDateTime": "2021-10-08T10:59:59Z",
        "periodBreakdown": Array [
          Object {
            "breakdownType": "PLAN",
            "periodBreakdownId": "PLAN|2021-09-08T12:00:00.000Z|2021-10-08T10:59:59.000Z",
            "periodGroupLimit": null,
            "periodGroupRemaining": null,
            "periodGroupUsage": null,
            "periodLimit": null,
            "periodRemaining": null,
            "periodUsage": Object {
              "unit": "MIN",
              "value": 238,
            },
          },
        ],
        "periodGroupUsage": null,
        "periodUsage": Object {
          "unit": "MIN",
          "value": 238,
        },
        "startDateTime": "2021-09-08T12:00:00Z",
        "unbilled": false,
      },
    ],
  },
}
`;
